--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>W3PAY</h1>
+<h1 class="docs-title">W3PAY Web3 Crypto Payments</h1>
+
+<p>Follow our activities and news on social networks.</p>
+
+<ul class="docs-list">
+	<li>Website: <a href="https://w3pay.dev/" target="_blank">https://w3pay.dev/</a></li>
+	<li>GitHub: <a href="https://github.com/W3PAY" target="_blank">https://github.com/W3PAY</a></li>
+	<li>Twitter: <a href="https://twitter.com/w3payment" target="_blank">https://twitter.com/w3payment</a></li>
+	<li>YouTube: <a href="https://www.youtube.com/@w3pay" target="_blank">https://www.youtube.com/@w3pay</a></li>
+	<li>Telegram Chanel: <a href="https://t.me/w3payment" target="_blank">https://t.me/w3payment</a></li>
+	<li>Telegram Group: <a href="https://t.me/w3payGroup" target="_blank">https://t.me/w3payGroup</a></li>
+</ul>
