--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <h1 class="docs-title">W3PAY Web3 Crypto Payments</h1>
 
-<p>Follow our activities and news on social networks.</p>
+<p>Follow our activities and news on social networks:</p>
 
 <ul class="docs-list">
 	<li>Website: <a href="https://w3pay.dev/" target="_blank">https://w3pay.dev/</a></li>
+	<li>GitHub Website: <a href="https://w3pay.github.io/" target="_blank">https://w3pay.github.io/</a></li>
 	<li>GitHub: <a href="https://github.com/W3PAY" target="_blank">https://github.com/W3PAY</a></li>
 	<li>Twitter: <a href="https://twitter.com/w3payment" target="_blank">https://twitter.com/w3payment</a></li>
 	<li>YouTube: <a href="https://www.youtube.com/@w3pay" target="_blank">https://www.youtube.com/@w3pay</a></li>
 	<li>Telegram Chanel: <a href="https://t.me/w3payment" target="_blank">https://t.me/w3payment</a></li>
 	<li>Telegram Group: <a href="https://t.me/w3payGroup" target="_blank">https://t.me/w3payGroup</a></li>
+</ul>
+
+<p>Latest website plugins:</p>
+
+<ul class="docs-list">
+	<li>CMS None: <a href="https://w3pay.github.io/plugins/w3pay/w3pay.zip" target="_blank">https://w3pay.github.io/plugins/w3pay/w3pay.zip</a></li>
+	<li>CMS WordPress WooCommerce: <a href="https://w3pay.github.io/plugins/w3payWordPress/w3pay.zip" target="_blank">https://w3pay.github.io/plugins/w3payWordPress/w3pay.zip</a></li>
+	<li>CMS OpenCart: <a href="https://w3pay.github.io/plugins/w3payOpenCart/w3pay.ocmod.zip" target="_blank">https://w3pay.github.io/plugins/w3payOpenCart/w3pay.ocmod.zip</a></li>
+</ul>
+
+<p>Plugin repositories on GitHub and installation guide:</p>
+
+<ul class="docs-list">
+	<li>CMS None: <a href="https://github.com/W3PAY/w3pay" target="_blank">https://github.com/W3PAY/w3pay</a></li>
+</ul>
+
+<p>All plugin versions in Packagist:</p>
+
+<ul class="docs-list">
+	<li>CMS None: <a href="https://packagist.org/packages/w3pay/w3pay" target="_blank">https://packagist.org/packages/w3pay/w3pay</a></li>
 </ul>
