--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 
 <ul class="docs-list">
 	<li>CMS None: <a href="https://github.com/W3PAY/w3pay" target="_blank">https://github.com/W3PAY/w3pay</a></li>
+	<li>CMS WordPress WooCommerce: <a href="https://github.com/W3PAY/w3pay-word-press" target="_blank">https://github.com/W3PAY/w3pay-word-press</a></li>
+	<li>CMS OpenCart: <a href="https://github.com/W3PAY/w3pay-open-cart" target="_blank">https://github.com/W3PAY/w3pay-open-cart</a></li>
 </ul>
 
 <p>All plugin versions in Packagist:</p>
 
 <ul class="docs-list">
 	<li>CMS None: <a href="https://packagist.org/packages/w3pay/w3pay" target="_blank">https://packagist.org/packages/w3pay/w3pay</a></li>
+	<li>CMS WordPress WooCommerce: <a href="https://packagist.org/packages/w3pay/w3pay-word-press" target="_blank">https://packagist.org/packages/w3pay/w3pay-word-press</a></li>
+	<li>CMS OpenCart: <a href="https://packagist.org/packages/w3pay/w3pay-open-cart" target="_blank">https://packagist.org/packages/w3pay/w3pay-open-cart</a></li>
 </ul>
